# shortl

./: LICENSE  README.md  main.py  main_builtin.py  main_custom.py  mcp_server_shortl.py  pyproject.toml  requirements.txt  setup.py  shortl.py  usage_builtin.py  usage_custom.py
src/: main.py  shortl.py
src/providers/: tinyurl.py  ulvis.py  zws.py
src/shortl/: __init__.py  mcp_server.py  server.py  shortl.py
tests/: test_builtin.py  test_custom.py  test_mcp_server.py  test_shortl.py
