[project]
name = "shortl"
version = "0.1.0"
description = "A simple, extensible Python library for URL shortening with built-in and custom providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.11.0",
]

test = [
    "pytest>=8.4.1",
]



[project.scripts]
shortl = "mcp_server_shortl:main"