[project]
name = "shortl"
version = "0.1.0"
description = "A simple, extensible Python library for URL shortening with built-in and custom providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]",
]
test = [
    "pytest",
]

[project.scripts]
shortl_mcp = "shortl.mcp_server:main"
